2008-03-26  Adam Roben  <aroben@apple.com>

        Windows build fix after r31324

        Written with Darin.

        Added HashTable plumbing to support using wchar_t as a key type.

        * wtf/HashFunctions.h:
        * wtf/HashTraits.h:
        (WTF::):

2008-03-26  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Darin.

        - JSC part of fix for "SVG multichar glyph matching matches longest instead of first (affects Acid3 test 79)"
        http://bugs.webkit.org/show_bug.cgi?id=18118

        * wtf/HashFunctions.h:
        (WTF::):
        * wtf/HashTraits.h:
        (WTF::):

2008-03-26  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Darin.

        Cache C string identifiers by address, not value, assuming that C strings can only
        be literals.

        1% speedup on Acid3 test 26.

        * kjs/identifier.cpp:
        (KJS::literalIdentifierTable):
        (KJS::Identifier::add):
        Added a new table to cache UString::Reps created from C strings by address. Elements are
        never removed from this cache, as only predefined identifiers can get there.

        * kjs/identifier.h:
        (KJS::Identifier::Identifier): Added a warning.

2008-03-26  Alexey Proskuryakov  <ap@webkit.org>

        Rubber-stamped by Maciej.

        An assertion was failing in function-toString-object-literals.html when parsing 1e-500.
        The condition existed before, and got uncovered by turning compiled-out dtoa checks into
        ASSERTs.

        The assertion was verifying that the caller wasn't constructing a Bigint from 0.
        This might have had some reason behind it originally, but I couldn't find any,
        and this doesn't look like a reasonable requirement.

        * kjs/dtoa.cpp: (d2b): Removed the assertion (two copies in different code paths).

2008-03-25  Adam Roben  <aroben@apple.com>

        Fix Bug 18077: Integrate testapi.c into the Windows build

        <http://bugs.webkit.org/show_bug.cgi?id=18077>
